--- a/README
+++ b/README
@@ -1,5 +1,11 @@
-Patient Pending is an attempt to collaboratively build a patient administration application that isn't complex to use, extend or maintain. Essentially unlike any other PAS system out there.
+# Welcome to Patient Pending
+
+Patient Pending is an attempt to collaboratively build a patient administration application that isn't complex to use, extend or maintain.
 
 A secondary aim of this sample application is to further our knowledge of key software patterns and practices in a domain that we know relatively well.
 
-Constraints:
+Initial commit contains the basis of a light-weight CQRS 'framework' borrowing concepts from Greg Young's SimplestPossibleThing and Lokad.CQRS. It implements a very simple SQL Server event store and an example of an EventConverter for managing event versioning.
+
+### TODO 
+* Introduce Simple.Testing style event specifications
+* Add a simple UI for patient management
